--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbershop Services</title>
+    <title>LA_CASA_BARBESHOP</title>
     <style>
         /* Modern Barber-themed CSS */
         :root {
@@ -150,7 +150,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Classic Haircut</h3>
-                    <div class="service-price">$30</div>
+                    <div class="service-price">15,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Precision scissor or clipper cuts with expert styling and finishing.</p>
@@ -162,7 +162,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Beard Trim & Shaping</h3>
-                    <div class="service-price">$20</div>
+                    <div class="service-price">10,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Sharp, clean lines for a well-groomed beard with hot towel treatment.</p>
@@ -174,7 +174,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="hot-towel-shave" class="service-name">Hot Towel Shave</h3>
-                    <div class="service-price">$35</div>
+                    <div class="service-price">20,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Traditional straight-razor shave with warm lather for baby-smooth skin.</p>
@@ -186,7 +186,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="haircut-beard"class="service-name">Haircut & Beard Combo</h3>
-                    <div class="service-price">$45</div>
+                    <div class="service-price">25,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Complete grooming package with haircut and precision beard shaping.</p>
@@ -198,7 +198,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="buzz-cut" class="service-name">Buzz Cut / Fade</h3>
-                    <div class="service-price">$25</div>
+                    <div class="service-price">12,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Classic taper fade, skin fade, or military buzz for sharp looks.</p>
@@ -210,7 +210,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Mustache Grooming</h3>
-                    <div class="service-price">$15</div>
+                    <div class="service-price">10,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Professional trimming and waxing for perfectly styled facial hair.</p>
@@ -222,7 +222,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Hair Coloring</h3>
-                    <div class="service-price">$50+</div>
+                    <div class="service-price">30,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Natural-looking gray coverage or bold color transformations.</p>
@@ -234,7 +234,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Scalp Treatment</h3>
-                    <div class="service-price">$25</div>
+                    <div class="service-price">45,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Hot oil massage and deep cleansing to promote healthy hair.</p>
