--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LA_CASA_BARBESHOP</title>
+    <title>LA_CASA_DE_BARBERSHOP</title>
     <!-- Google Fonts: Montserrat & Playfair Display for beautiful titles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
@@ -288,13 +288,14 @@
 
     <!-- Home Section -->
     <section id="home" class="home-section">
-        <h1 class="home-title">Welcome to La Casa Barbershop</h1>
+        <h1 class="home-title">Welcome to La Casa De Barbershop</h1>
         <div class="home-welcome">Where Style Meets Precision</div>
         <div class="home-desc">
             La Casa Barbershop is your modern destination for premium grooming and timeless style in the heart of the city. 
             Our skilled barbers blend classic techniques with the latest trends to deliver the perfect cut, shave, and experience for every gentleman. 
             Step into our welcoming space and enjoy a personalized touch, attention to detail, and a relaxing atmosphere that keeps you looking sharp and feeling confident.
-        </div>
+        </div><br>
+         <img src="lacasa04.PNG" style="height: 400; width: 300">
     </section>
 
     <!-- Services Section -->
@@ -306,7 +307,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Classic Haircut</h3>
-                    <div class="service-price">15,000Tsh/=</div>
+                    <div class="service-price">10,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Precision scissor or clipper cuts with expert styling and finishing.</p>
@@ -328,7 +329,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="hot-towel-shave" class="service-name">Hot Towel Shave</h3>
-                    <div class="service-price">20,000Tsh/=</div>
+                    <div class="service-price">12,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Traditional straight-razor shave with warm lather for baby-smooth skin.</p>
@@ -339,7 +340,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="haircut-beard" class="service-name">Haircut & Beard Combo</h3>
-                    <div class="service-price">25,000Tsh/=</div>
+                    <div class="service-price">15,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Complete grooming package with haircut and precision beard shaping.</p>
@@ -350,7 +351,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 id="buzz-cut" class="service-name">Buzz Cut / Fade</h3>
-                    <div class="service-price">12,000Tsh/=</div>
+                    <div class="service-price">8,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Classic taper fade, skin fade, or military buzz for sharp looks.</p>
@@ -361,7 +362,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Mustache Grooming</h3>
-                    <div class="service-price">10,000Tsh/=</div>
+                    <div class="service-price">6,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Professional trimming and waxing for perfectly styled facial hair.</p>
@@ -372,7 +373,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Hair Coloring</h3>
-                    <div class="service-price">30,000Tsh/=</div>
+                    <div class="service-price">20,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Natural-looking gray coverage or bold color transformations.</p>
@@ -383,7 +384,7 @@
             <div class="service-card">
                 <div class="service-header">
                     <h3 class="service-name">Scalp Treatment</h3>
-                    <div class="service-price">45,000Tsh/=</div>
+                    <div class="service-price">25,000Tsh/=</div>
                 </div>
                 <div class="service-desc">
                     <p>Hot oil massage and deep cleansing to promote healthy hair.</p>
