--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             Our skilled barbers blend classic techniques with the latest trends to deliver the perfect cut, shave, and experience for every gentleman. 
             Step into our welcoming space and enjoy a personalized touch, attention to detail, and a relaxing atmosphere that keeps you looking sharp and feeling confident.
         </div><br>
-         <img src="images/lacasa04.PNG" style="height: 400; width: 300">
+        <img src="images/lacasa04.PNG" alt="Barbershop Interior" width="300" height="400">
     </section>
 
     <!-- Services Section -->
