--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <h2 class="section-title">Gallery</h2>
           <div class="barber-pole"></div>
         <div class="gallery-placeholder">
-            <div class="gallery-item"><i class="fa-regular fa-image"></i> Image Placeholder</div>
+            <div class="gallery-item"><img src="images/lacaslogo.PNG" style="width: 200; height: 200;"></div>
             <div class="gallery-item"><i class="fa-regular fa-image"></i> Image Placeholder</div>
             <div class="gallery-item"><i class="fa-regular fa-image"></i> Image Placeholder</div>
             <div class="gallery-item"><i class="fa-regular fa-image"></i> Image Placeholder</div>
