--- a/index.html
+++ b/index.html
@@ -391,6 +391,16 @@
                     <button class="book-btn">Book Now</button>
                 </div>
             </div>
+             <div class="service-card">
+                <div class="service-header">
+                    <h3 class="service-name">Spa Bath</h3>
+                    <div class="service-price">35,000Tsh/=</div>
+                </div>
+                <div class="service-desc">
+                    <p>get a cool bath from our barbershop.</p>
+                    <button class="book-btn">Book Now</button>
+                </div>
+            </div>
         </div>
     </div>
 
