--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             Our skilled barbers blend classic techniques with the latest trends to deliver the perfect cut, shave, and experience for every gentleman. 
             Step into our welcoming space and enjoy a personalized touch, attention to detail, and a relaxing atmosphere that keeps you looking sharp and feeling confident.
         </div><br>
-        <img src="images/lacasa04.PNG" alt="Barbershop Interior" width="400" height="350">
+        <img src="images/lacasa04.PNG" alt="Barbershop Interior" width="350" height="350; border-radius: 6px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); img:hover: transform: translateY(-10px);">
     </section>
 
     <!-- Services Section -->
@@ -388,16 +388,6 @@
                 </div>
                 <div class="service-desc">
                     <p>Hot oil massage and deep cleansing to promote healthy hair.</p>
-                    <button class="book-btn">Book Now</button>
-                </div>
-            </div>
-             <div class="service-card">
-                <div class="service-header">
-                    <h3 class="service-name">Spa Bath</h3>
-                    <div class="service-price">35,000Tsh/=</div>
-                </div>
-                <div class="service-desc">
-                    <p>get a cool bath from our barbershop.</p>
                     <button class="book-btn">Book Now</button>
                 </div>
             </div>
