--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             Our skilled barbers blend classic techniques with the latest trends to deliver the perfect cut, shave, and experience for every gentleman. 
             Step into our welcoming space and enjoy a personalized touch, attention to detail, and a relaxing atmosphere that keeps you looking sharp and feeling confident.
         </div>
-        <img class="home-image" src="image/lacasa04.PNG" alt="Barbershop exterior" width="400" height="400">
+        <img class="home-image" src="images/lacasa04.PNG" alt="Barbershop exterior" width="400" height="400">
         <br>
-         <img class="home-image" src="image/front.jpg" alt="Barbershop exterior" width="400" height="400">
+         <img class="home-image" src="images/front.jpg" alt="Barbershop exterior" width="400" height="400">
          <br>
         <a href="services.html"><button class="cta-btn"><i class="fa-solid fa-scissors"></i> Explore Our Services</button></a>
     </section>
