--- a/gallery.html
+++ b/gallery.html
@@ -174,19 +174,19 @@
         <div class="barber-pole"></div>
         <div class="gallery-placeholder">
             <div class="gallery-item">
-                <img src="image/lacasa08.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa08.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa06.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa06.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa07.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa07.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa03.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa03.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
         </div>
