--- a/gallery.html
+++ b/gallery.html
@@ -170,18 +170,24 @@
         <a href="contact.html">Contact</a>
     </nav>
     <section class="gallery-section">
-        <h2 class="section-title">Gallery</h2>
+<h2 class="section-title">Gallery</h2>
         <div class="barber-pole"></div>
+        <div class="gallery-placeholder">
             <div class="gallery-item">
-                <img src="images/lacasa08.PNG" alt="style1" class="gallery-img-preview">
+                <img src="image/lacasa08.PNG" alt="" class="gallery-img-preview">
+                <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="images/lacasa06.PNG" alt="style2" class="gallery-img-preview">
-            </div>
-                <img src="images/lacasa07.PNG" alt="style3" class="gallery-img-preview">
+                <img src="image/lacasa06.PNG" alt="" class="gallery-img-preview">
+                <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="images/lacasa03.PNG" alt="style4" class="gallery-img-preview">
+                <img src="image/lacasa07.PNG" alt="" class="gallery-img-preview">
+                <div class="gallery-caption"></div>
+            </div>
+            <div class="gallery-item">
+                <img src="image/lacasa03.PNG" alt="" class="gallery-img-preview">
+                <div class="gallery-caption"></div>
             </div>
         </div>
         <div class="gallery-info">
