--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h1 class="home-title">Welcome to La Casa De Barbershop</h1>
         <div class="home-welcome">Where Style Meets Precision</div>
         <div class="home-desc">
-            La Casa Barbershop is your modern destination for premium grooming and timeless style in the heart of the city. 
+            La Casa de Barbershop is your modern destination for premium grooming and timeless style in the heart of the city. 
             Our skilled barbers blend classic techniques with the latest trends to deliver the perfect cut, shave, and experience for every gentleman. 
             Step into our welcoming space and enjoy a personalized touch, attention to detail, and a relaxing atmosphere that keeps you looking sharp and feeling confident.
         </div>
