--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,7 @@
             min-height: 160px;
         }
         .gallery-item {
-            border: 2px dashed var(--primary);
+            border: 2px solid var(--primary);
             border-radius: 8px;
             background: var(--light);
             height: 250px;
@@ -100,7 +100,6 @@
             color: var(--accent);
             font-size: 1.2rem;
             font-weight: 600;
-            opacity: 0.7;
             flex-direction: column;
             transition: box-shadow 0.3s, transform 0.3s;
             background-size: cover;
@@ -108,7 +107,6 @@
         }
         .gallery-item:hover {
             box-shadow: 0 8px 32px rgba(212,175,55,0.16);
-            opacity: 1;
             transform: scale(1.04);
         }
         .gallery-img-preview {
