--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <br>
          <img class="home-image" src="images/front.jpg" alt="Barbershop exterior" width="400" height="400">
          <br>
-        <a href="services.html"><button class="cta-btn"><i class="fa-solid fa-scissors"></i> Explore Our Services</button></a>
+        <a href="services.html"><button class="cta-btn"><i class="fa-solid fa-scissors"></i> click to see Our Services</button></a>
     </section>
 </body>
 </html>
