--- a/services.html
+++ b/services.html
@@ -128,6 +128,29 @@
         .book-btn:hover {
             background: #6d0000;
         }
+         .cta-btn {
+            background: var(--accent);
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            margin-top: 28px;
+            padding: 14px 36px;
+            font-size: 1.1rem;
+            font-weight: 700;
+            cursor: pointer;
+            transition: background 0.3s;
+            box-shadow: 0 2px 8px rgba(139,0,0,0.07);
+        }
+        .cta-btn:hover {
+            background: var(--primary);
+            color: var(--secondary);
+        }
+        .CTA {
+            justify-content: center;
+            place-items: center;
+            padding-left: 175PX;
+            margin-bottom: 30PX;
+        }
         @media (max-width: 1000px) {
             .services-grid {
                 grid-template-columns: 1fr 1fr;
@@ -234,6 +257,8 @@
             </div>
         </div>
     </div>
-    <a href="gallery.html"><button class="cta-btn"><i class="fa-solid fa-camera"></i> Explore Our cool photos</button></a>
+    <div class="CTA">
+  <a href="gallery.html"><button class="cta-btn"><i class="fa-solid fa-camera"></i> Click to explore our photos</button></a>
+    </div>
 </body>
 </html>
