--- a/gallery.html
+++ b/gallery.html
@@ -208,7 +208,7 @@
         <div class="gallery-info">
             *Check back soon for snapshots of our stylish cuts and happy clients!
         </div>
-        <a href="contact.html"><button class="cta-btn"><i class="fa-solid fa-phone"></i> Click to Explore Our contact</button></a>
+        <a href="contact.html"><button class="cta-btn"><i class="fa-solid fa-phone"></i> Click to check contact infos</button></a>
     </section>
 </body>
 </html>
