--- a/gallery.html
+++ b/gallery.html
@@ -185,30 +185,30 @@
         <a href="contact.html">Contact</a>
     </nav>
     <section class="gallery-section">
-        <h2 class="section-title">Gallery</h2>
+<h2 class="section-title">Gallery</h2>
         <div class="barber-pole"></div>
         <div class="gallery-placeholder">
             <div class="gallery-item">
-                <img src="image/lacasa08.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa08.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa06.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa06.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa07.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa07.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
             <div class="gallery-item">
-                <img src="image/lacasa03.PNG" alt="" class="gallery-img-preview">
+                <img src="images/lacasa03.PNG" alt="" class="gallery-img-preview">
                 <div class="gallery-caption"></div>
             </div>
         </div>
         <div class="gallery-info">
             *Check back soon for snapshots of our stylish cuts and happy clients!
         </div>
-        <a href="contact.html"><button class="cta-btn"><i class="fa-solid fa-phone"></i> Click to check contact infos</button></a>
+        <a href="contact.html"><button class="cta-btn"><i class="fa-solid fa-phone"></i> Click to see contact infos</button></a>
     </section>
 </body>
 </html>
